# ForecastStudio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONFIG.md  DEPLOY.md  Makefile  README.md  SETUP.md  docker-compose.yml  example_data.csv  pyproject.toml
.github/workflows/: deploy.yml  pr-checks.yml
.prompts/: CURSOR_2.0_INTEGRATION.md  CURSOR_GUIDE.md  README.md  architect.md  code_quality.md  foundation.md  product_agent.md  research_agent.md  test_agent.md
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260407_01_datasource_status.py
backend/app/: config.py  main.py
backend/app/api/: agents.py  auth.py  connections.py  data.py  models.py  monitoring.py
backend/app/connectors/: __init__.py  base.py  csv_upload.py  postgres.py  registry.py
backend/app/db/: models.py  session.py
backend/app/services/: data_service.py  model_service.py  pipeline_service.py
backend/app/storage/: blob.py
backend/app/tasks/: __init__.py  training.py
backend/scripts/: seed_admin.py
backend/tests/: test_smoke.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/data/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/monitoring/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/scheduling/: page.tsx
frontend/src/components/data/: PostgresWizard.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
infra/: init-db.sql  main.bicep
orchestration/: Dockerfile  pyproject.toml
orchestration/fs_orch/: __init__.py  definitions.py
