[project]
name = "forecast-studio"
version = "0.3.0"
description = "Forecast Studio — enterprise forecasting platform (workspace root)"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["packages/forecaster", "backend", "orchestration"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pre-commit>=3.5.0",
    "types-python-jose",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["forecaster", "app", "fs_orch"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
explicit_package_bases = true
mypy_path = ["packages/forecaster", "backend", "orchestration"]
