[project]
name = "forecast-studio-orchestration"
version = "0.1.0"
description = "Forecast Studio — Dagster pipelines, MLflow, data quality"
requires-python = ">=3.12,<3.13"
dependencies = [
    "forecaster",
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "mlflow>=2.18.0",
    "great-expectations>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]

[tool.uv.sources]
forecaster = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fs_orch"]
